# embeddedLinux

./: MaxOf3.cpp  file.txt  package-lock.json  rightangle.cpp  sum  sumint.cpp  task1.py  task7.py  vowel
c++/address_book/: CMakeLists.txt
c++/address_book/include/: address.hpp
c++/lecture1/: asciiTable.cpp  vowel.cpp
c++/lecture2/: del  delete.cpp  evn  findEven.cpp  max  max_array.cpp  search  search.cpp  squreof.cpp
c++/lecture2/address_book/src/: address.cpp
c++/lecture5/strtingclass/: CMakeLists.txt  main.cpp  str.cpp  str.hpp
c++/lecture5/test/: test  test.cpp
c++/lecture6/: CMakeLists.txt
c++/lecture6/include/: Drawable.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp
c++/lecture6/src/: Rectangle.cpp  Shape.cpp  Triangle.cpp  main.cpp
c++/pc_control/: CMakeLists.txt  README.md
c++/pc_control/includes/: command.hpp
c++/pc_control/src/: client.cpp  command.cpp  main.cpp
python/: areacircle.py  calendar_1.py  task2.py  task3.py  task4.py
